<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <GVL Name="GVL_OPC_UA" Id="{30465ce4-cb68-4b5b-899c-6742322bd070}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	// Rezept-Controlword
	{attribute 'OPC.UA.DA' := '1'}
	{attribute 'OPC.UA.DA.StructuredType' := '1'}
	CW			:RezeptControlWord;
	
	// Rezept-Statusword
	{attribute 'OPC.UA.DA' := '1'}
	{attribute 'OPC.UA.DA.Access' := '1'}
	{attribute 'OPC.UA.DA.StructuredType' := '1'}
	SW			:RezeptStatusWord;
	
	// System-Statusword
	{attribute 'OPC.UA.DA' := '1'}
	{attribute 'OPC.UA.DA.StructuredType' := '1'}
	SysSW		:SystemStatusWord;
	
	// Sekundärreaktor-Controlword
	{attribute 'OPC.UA.DA' := '1'}
	{attribute 'OPC.UA.DA.StructuredType' := '1'}
	SekCW		:SekControlWord;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>