<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <GVL Name="GVL" Id="{2f1a5837-5f08-48be-bb75-10432a2fbf59}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	
	// Bedienparameter
	Bedien_Power		:BOOL := TRUE;
	Bedien_Reset		:BOOL;

END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>