<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="Kommunikation" Id="{36ca285f-8f18-49ff-80f3-f202fc5db8df}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM Kommunikation
VAR
	
	// Instanziierung der Auswertung:
	Auswertung		:FB_Auswertung;
	Mode			:FB_Modus;
	
	// Instanziierung der Grundfunktionen: 
	Entleeren		:GF_Entleeren;
	//Halten			:GF_Halten;
	Pumpen			:GF_Pumpen;
	Zirkulieren		:GF_Zirkulieren;
	Ruehren 		:GF_Ruehren;
	Warten			:GF_Warten;	
	Befuellen		:GF_Befuellen;	
	Leitung			:FB_Leitungswahl;

END_VAR
]]></Declaration>
    <Implementation>
      <CFC>
        <XmlArchive>
          <Data>
            <o xml:space="preserve" t="CFCImplementationObject">
              <o n="Items" t="CFCItemList">
                <l2 n="InnerList">
                  <o t="CFCBoxElement">
                    <o n="Inputs" t="CFCItemList">
                      <l2 n="InnerList" cet="CFCInputPin">
                        <o>
                          <v n="Bounds">"0, 0, 0, 0"</v>
                          <n n="ElementGroupId" />
                          <v n="IsExtensiblePin">false</v>
                          <v n="ProcessValue">""</v>
                          <v n="Access" t="ProcessValueAccess">None</v>
                          <v n="Negated">false</v>
                          <v n="SetReset" t="SetReset">None</v>
                          <v n="SetResetRef" t="SetResetRef">None</v>
                          <v n="PretendsToBeConnected">false</v>
                          <v n="Id">66L</v>
                        </o>
                        <o>
                          <v n="Bounds">"0, 0, 0, 0"</v>
                          <n n="ElementGroupId" />
                          <v n="IsExtensiblePin">false</v>
                          <v n="ProcessValue">""</v>
                          <v n="Access" t="ProcessValueAccess">None</v>
                          <v n="Negated">false</v>
                          <v n="SetReset" t="SetReset">None</v>
                          <v n="SetResetRef" t="SetResetRef">None</v>
                          <v n="PretendsToBeConnected">false</v>
                          <v n="Id">122L</v>
                        </o>
                        <o>
                          <v n="Bounds">"0, 0, 0, 0"</v>
                          <n n="ElementGroupId" />
                          <v n="IsExtensiblePin">false</v>
                          <v n="ProcessValue">""</v>
                          <v n="Access" t="ProcessValueAccess">None</v>
                          <v n="Negated">false</v>
                          <v n="SetReset" t="SetReset">None</v>
                          <v n="SetResetRef" t="SetResetRef">None</v>
                          <v n="PretendsToBeConnected">false</v>
                          <v n="Id">92L</v>
                        </o>
                        <o>
                          <v n="Bounds">"0, 0, 0, 0"</v>
                          <n n="ElementGroupId" />
                          <v n="IsExtensiblePin">false</v>
                          <v n="ProcessValue">""</v>
                          <v n="Access" t="ProcessValueAccess">None</v>
                          <v n="Negated">false</v>
                          <v n="SetReset" t="SetReset">None</v>
                          <v n="SetResetRef" t="SetResetRef">None</v>
                          <v n="PretendsToBeConnected">false</v>
                          <v n="Id">116L</v>
                        </o>
                        <o>
                          <v n="Bounds">"0, 0, 0, 0"</v>
                          <n n="ElementGroupId" />
                          <v n="IsExtensiblePin">false</v>
                          <v n="ProcessValue">""</v>
                          <v n="Access" t="ProcessValueAccess">None</v>
                          <v n="Negated">false</v>
                          <v n="SetReset" t="SetReset">None</v>
                          <v n="SetResetRef" t="SetResetRef">None</v>
                          <v n="PretendsToBeConnected">false</v>
                          <v n="Id">128L</v>
                        </o>
                      </l2>
                    </o>
                    <o n="Outputs" t="CFCItemList">
                      <l2 n="InnerList" cet="CFCOutputPin">
                        <o>
                          <v n="Bounds">"0, 0, 0, 0"</v>
                          <n n="ElementGroupId" />
                          <v n="Negated">false</v>
                          <v n="SetReset" t="SetReset">None</v>
                          <v n="SetResetRef" t="SetResetRef">None</v>
                          <v n="PretendsToBeConnected">false</v>
                          <v n="Id">94L</v>
                        </o>
                        <o>
                          <v n="Bounds">"0, 0, 0, 0"</v>
                          <n n="ElementGroupId" />
                          <v n="Negated">false</v>
                          <v n="SetReset" t="SetReset">None</v>
                          <v n="SetResetRef" t="SetResetRef">None</v>
                          <v n="PretendsToBeConnected">false</v>
                          <v n="Id">68L</v>
                        </o>
                      </l2>
                    </o>
                    <o n="Texts" t="CFCItemList">
                      <l2 n="InnerList" cet="CFCText">
                        <o>
                          <v n="Bounds">"0, 0, 0, 0"</v>
                          <n n="ElementGroupId" />
                          <v n="Text">"I_Manuel"</v>
                          <v n="Modifiable">true</v>
                          <v n="Id">67L</v>
                        </o>
                        <o>
                          <v n="Bounds">"0, 0, 0, 0"</v>
                          <n n="ElementGroupId" />
                          <v n="Text">"I_RNr"</v>
                          <v n="Modifiable">true</v>
                          <v n="Id">123L</v>
                        </o>
                        <o>
                          <v n="Bounds">"0, 0, 0, 0"</v>
                          <n n="ElementGroupId" />
                          <v n="Text">"I_ControlWord"</v>
                          <v n="Modifiable">true</v>
                          <v n="Id">93L</v>
                        </o>
                        <o>
                          <v n="Bounds">"0, 0, 0, 0"</v>
                          <n n="ElementGroupId" />
                          <v n="Text">"I_SystemStatusWord"</v>
                          <v n="Modifiable">true</v>
                          <v n="Id">117L</v>
                        </o>
                        <o>
                          <v n="Bounds">"0, 0, 0, 0"</v>
                          <n n="ElementGroupId" />
                          <v n="Text">"I_SekCW"</v>
                          <v n="Modifiable">true</v>
                          <v n="Id">129L</v>
                        </o>
                        <o>
                          <v n="Bounds">"0, 0, 0, 0"</v>
                          <n n="ElementGroupId" />
                          <v n="Text">"O_StatusWord"</v>
                          <v n="Modifiable">true</v>
                          <v n="Id">95L</v>
                        </o>
                        <o>
                          <v n="Bounds">"0, 0, 0, 0"</v>
                          <n n="ElementGroupId" />
                          <v n="Text">"O_SystemON"</v>
                          <v n="Modifiable">true</v>
                          <v n="Id">69L</v>
                        </o>
                        <o>
                          <v n="Bounds">"0, 0, 0, 0"</v>
                          <n n="ElementGroupId" />
                          <v n="Text">"FB_Auswertung"</v>
                          <v n="Modifiable">true</v>
                          <v n="Id">27L</v>
                        </o>
                        <o>
                          <v n="Bounds">"0, 0, 0, 0"</v>
                          <n n="ElementGroupId" />
                          <v n="Text">"Auswertung "</v>
                          <v n="Modifiable">true</v>
                          <v n="Id">28L</v>
                        </o>
                      </l2>
                    </o>
                    <o n="Parameters" t="CFCItemList">
                      <l2 n="InnerList" />
                    </o>
                    <n n="PreparedParameters" />
                    <v n="PageArea">0</v>
                    <v n="Bounds">"15, 4, 0, 0"</v>
                    <n n="ElementGroupId" />
                    <v n="EnEno">false</v>
                    <v n="KindOfCall" t="KindOfCall">FunctionBlock</v>
                    <v n="ContainsExtensibleInputs">false</v>
                    <v n="Forced">false</v>
                    <v n="OwningPageId">-1L</v>
                    <v n="Id">20L</v>
                  </o>
                  <o t="CFCOutputElement">
                    <o n="Input" t="CFCInputPinWithSetReset">
                      <v n="Bounds">"0, 0, 0, 0"</v>
                      <n n="ElementGroupId" />
                      <v n="ProcessValue">""</v>
                      <v n="Access" t="ProcessValueAccess">None</v>
                      <v n="Negated">false</v>
                      <v n="SetReset" t="SetReset">None</v>
                      <v n="SetResetRef" t="SetResetRef">None</v>
                      <v n="PretendsToBeConnected">false</v>
                      <v n="Id">63L</v>
                    </o>
                    <o n="Text" t="CFCText">
                      <v n="Bounds">"0, 0, 0, 0"</v>
                      <n n="ElementGroupId" />
                      <v n="Text">"GVL_OPC_UA.SW"</v>
                      <v n="Modifiable">true</v>
                      <v n="Id">64L</v>
                    </o>
                    <v n="PageArea">4</v>
                    <v n="Bounds">"31, 6, 0, 0"</v>
                    <n n="ElementGroupId" />
                    <v n="OwningPageId">-1L</v>
                    <v n="Id">62L</v>
                  </o>
                  <o t="CFCInputElement">
                    <o n="Output" t="CFCOutputPin">
                      <v n="Bounds">"0, 0, 0, 0"</v>
                      <n n="ElementGroupId" />
                      <v n="Negated">false</v>
                      <v n="SetReset" t="SetReset">None</v>
                      <v n="SetResetRef" t="SetResetRef">None</v>
                      <v n="PretendsToBeConnected">false</v>
                      <v n="Id">59L</v>
                    </o>
                    <o n="Text" t="CFCText">
                      <v n="Bounds">"0, 0, 0, 0"</v>
                      <n n="ElementGroupId" />
                      <v n="Text">"GVL_OPC_UA.CW"</v>
                      <v n="Modifiable">true</v>
                      <v n="Id">60L</v>
                    </o>
                    <v n="PageArea">3</v>
                    <v n="Bounds">"5, 8, 0, 0"</v>
                    <n n="ElementGroupId" />
                    <v n="OwningPageId">-1L</v>
                    <v n="Id">58L</v>
                  </o>
                  <o t="CFCInputElement">
                    <o n="Output" t="CFCOutputPin">
                      <v n="Bounds">"0, 0, 0, 0"</v>
                      <n n="ElementGroupId" />
                      <v n="Negated">false</v>
                      <v n="SetReset" t="SetReset">None</v>
                      <v n="SetResetRef" t="SetResetRef">None</v>
                      <v n="PretendsToBeConnected">false</v>
                      <v n="Id">125L</v>
                    </o>
                    <o n="Text" t="CFCText">
                      <v n="Bounds">"0, 0, 0, 0"</v>
                      <n n="ElementGroupId" />
                      <v n="Text">"1"</v>
                      <v n="Modifiable">true</v>
                      <v n="Id">126L</v>
                    </o>
                    <v n="PageArea">3</v>
                    <v n="Bounds">"11, 7, 0, 0"</v>
                    <n n="ElementGroupId" />
                    <v n="OwningPageId">-1L</v>
                    <v n="Id">124L</v>
                  </o>
                  <o t="CFCOutputElement">
                    <o n="Input" t="CFCInputPinWithSetReset">
                      <v n="Bounds">"0, 0, 0, 0"</v>
                      <n n="ElementGroupId" />
                      <v n="ProcessValue">""</v>
                      <v n="Access" t="ProcessValueAccess">None</v>
                      <v n="Negated">false</v>
                      <v n="SetReset" t="SetReset">None</v>
                      <v n="SetResetRef" t="SetResetRef">None</v>
                      <v n="PretendsToBeConnected">false</v>
                      <v n="Id">71L</v>
                    </o>
                    <o n="Text" t="CFCText">
                      <v n="Bounds">"0, 0, 0, 0"</v>
                      <n n="ElementGroupId" />
                      <v n="Text">"GVL.Bedien_Power"</v>
                      <v n="Modifiable">true</v>
                      <v n="Id">72L</v>
                    </o>
                    <v n="PageArea">4</v>
                    <v n="Bounds">"31, 7, 0, 0"</v>
                    <n n="ElementGroupId" />
                    <v n="OwningPageId">-1L</v>
                    <v n="Id">70L</v>
                  </o>
                  <o t="CFCConnection">
                    <v n="Bounds">"0, 0, 0, 0"</v>
                    <n n="ElementGroupId" />
                    <v n="SourcePinId">68L</v>
                    <v n="DestPinId">71L</v>
                    <v n="Id">73L</v>
                  </o>
                  <o t="CFCConnection">
                    <v n="Bounds">"0, 0, 0, 0"</v>
                    <n n="ElementGroupId" />
                    <v n="SourcePinId">94L</v>
                    <v n="DestPinId">63L</v>
                    <v n="Id">96L</v>
                  </o>
                  <o t="CFCConnection">
                    <v n="Bounds">"0, 0, 0, 0"</v>
                    <n n="ElementGroupId" />
                    <v n="SourcePinId">59L</v>
                    <v n="DestPinId">92L</v>
                    <v n="Id">97L</v>
                  </o>
                  <o t="CFCInputElement">
                    <o n="Output" t="CFCOutputPin">
                      <v n="Bounds">"0, 0, 0, 0"</v>
                      <n n="ElementGroupId" />
                      <v n="Negated">false</v>
                      <v n="SetReset" t="SetReset">None</v>
                      <v n="SetResetRef" t="SetResetRef">None</v>
                      <v n="PretendsToBeConnected">false</v>
                      <v n="Id">119L</v>
                    </o>
                    <o n="Text" t="CFCText">
                      <v n="Bounds">"0, 0, 0, 0"</v>
                      <n n="ElementGroupId" />
                      <v n="Text">"GVL_OPC_UA.SysSW"</v>
                      <v n="Modifiable">true</v>
                      <v n="Id">120L</v>
                    </o>
                    <v n="PageArea">3</v>
                    <v n="Bounds">"4, 9, 0, 0"</v>
                    <n n="ElementGroupId" />
                    <v n="OwningPageId">-1L</v>
                    <v n="Id">118L</v>
                  </o>
                  <o t="CFCConnection">
                    <v n="Bounds">"0, 0, 0, 0"</v>
                    <n n="ElementGroupId" />
                    <v n="SourcePinId">119L</v>
                    <v n="DestPinId">116L</v>
                    <v n="Id">121L</v>
                  </o>
                  <o t="CFCConnection">
                    <v n="Bounds">"0, 0, 0, 0"</v>
                    <n n="ElementGroupId" />
                    <v n="SourcePinId">125L</v>
                    <v n="DestPinId">122L</v>
                    <v n="Id">127L</v>
                  </o>
                  <o t="CFCInputElement">
                    <o n="Output" t="CFCOutputPin">
                      <v n="Bounds">"0, 0, 0, 0"</v>
                      <n n="ElementGroupId" />
                      <v n="Negated">false</v>
                      <v n="SetReset" t="SetReset">None</v>
                      <v n="SetResetRef" t="SetResetRef">None</v>
                      <v n="PretendsToBeConnected">false</v>
                      <v n="Id">131L</v>
                    </o>
                    <o n="Text" t="CFCText">
                      <v n="Bounds">"0, 0, 0, 0"</v>
                      <n n="ElementGroupId" />
                      <v n="Text">"GVL_OPC_UA.SekCW"</v>
                      <v n="Modifiable">true</v>
                      <v n="Id">132L</v>
                    </o>
                    <v n="PageArea">3</v>
                    <v n="Bounds">"4, 10, 0, 0"</v>
                    <n n="ElementGroupId" />
                    <v n="OwningPageId">-1L</v>
                    <v n="Id">130L</v>
                  </o>
                  <o t="CFCConnection">
                    <v n="Bounds">"0, 0, 0, 0"</v>
                    <n n="ElementGroupId" />
                    <v n="SourcePinId">131L</v>
                    <v n="DestPinId">128L</v>
                    <v n="Id">133L</v>
                  </o>
                </l2>
              </o>
              <n n="ParameterInitializationMethodGenerator" />
              <o n="RoutingPathTable" t="CFCRoutingPathTable">
                <d2 n="InnerDictionary" ckt="CFCRoutingConnection" cvt="CFCPointList">
                  <o>
                    <v n="ConnectionId">133L</v>
                    <o n="StartPoint" t="CFCPoint">
                      <v n="X">14</v>
                      <v n="Y">10</v>
                      <v n="IsJoint">false</v>
                      <v n="Flags">0</v>
                    </o>
                    <v n="Unroutable">true</v>
                    <n n="CorrespondingPageId" />
                    <v n="Locked">false</v>
                  </o>
                  <o>
                    <l2 n="InnerList" cet="CFCPoint">
                      <o>
                        <v n="X">14</v>
                        <v n="Y">10</v>
                        <v n="IsJoint">false</v>
                        <v n="Flags">0</v>
                      </o>
                    </l2>
                  </o>
                  <o>
                    <v n="ConnectionId">127L</v>
                    <o n="StartPoint" t="CFCPoint">
                      <v n="X">14</v>
                      <v n="Y">7</v>
                      <v n="IsJoint">false</v>
                      <v n="Flags">0</v>
                    </o>
                    <v n="Unroutable">true</v>
                    <n n="CorrespondingPageId" />
                    <v n="Locked">false</v>
                  </o>
                  <o>
                    <l2 n="InnerList" cet="CFCPoint">
                      <o>
                        <v n="X">14</v>
                        <v n="Y">7</v>
                        <v n="IsJoint">false</v>
                        <v n="Flags">0</v>
                      </o>
                    </l2>
                  </o>
                  <o>
                    <v n="ConnectionId">121L</v>
                    <o n="StartPoint" t="CFCPoint">
                      <v n="X">14</v>
                      <v n="Y">9</v>
                      <v n="IsJoint">false</v>
                      <v n="Flags">0</v>
                    </o>
                    <v n="Unroutable">true</v>
                    <n n="CorrespondingPageId" />
                    <v n="Locked">false</v>
                  </o>
                  <o>
                    <l2 n="InnerList" cet="CFCPoint">
                      <o>
                        <v n="X">14</v>
                        <v n="Y">9</v>
                        <v n="IsJoint">false</v>
                        <v n="Flags">0</v>
                      </o>
                    </l2>
                  </o>
                  <o>
                    <v n="ConnectionId">97L</v>
                    <o n="StartPoint" t="CFCPoint">
                      <v n="X">14</v>
                      <v n="Y">8</v>
                      <v n="IsJoint">false</v>
                      <v n="Flags">0</v>
                    </o>
                    <v n="Unroutable">true</v>
                    <n n="CorrespondingPageId" />
                    <v n="Locked">false</v>
                  </o>
                  <o>
                    <l2 n="InnerList" cet="CFCPoint">
                      <o>
                        <v n="X">14</v>
                        <v n="Y">8</v>
                        <v n="IsJoint">false</v>
                        <v n="Flags">0</v>
                      </o>
                    </l2>
                  </o>
                  <o>
                    <v n="ConnectionId">96L</v>
                    <o n="StartPoint" t="CFCPoint">
                      <v n="X">30</v>
                      <v n="Y">6</v>
                      <v n="IsJoint">false</v>
                      <v n="Flags">0</v>
                    </o>
                    <v n="Unroutable">true</v>
                    <n n="CorrespondingPageId" />
                    <v n="Locked">false</v>
                  </o>
                  <o>
                    <l2 n="InnerList" cet="CFCPoint">
                      <o>
                        <v n="X">30</v>
                        <v n="Y">6</v>
                        <v n="IsJoint">false</v>
                        <v n="Flags">0</v>
                      </o>
                    </l2>
                  </o>
                  <o>
                    <v n="ConnectionId">73L</v>
                    <o n="StartPoint" t="CFCPoint">
                      <v n="X">30</v>
                      <v n="Y">7</v>
                      <v n="IsJoint">false</v>
                      <v n="Flags">0</v>
                    </o>
                    <v n="Unroutable">true</v>
                    <n n="CorrespondingPageId" />
                    <v n="Locked">false</v>
                  </o>
                  <o>
                    <l2 n="InnerList" cet="CFCPoint">
                      <o>
                        <v n="X">30</v>
                        <v n="Y">7</v>
                        <v n="IsJoint">false</v>
                        <v n="Flags">0</v>
                      </o>
                    </l2>
                  </o>
                </d2>
              </o>
              <v n="AutoSizeCanvas">true</v>
              <v n="CanvasWidth">42</v>
              <v n="CanvasHeight">13</v>
            </o>
          </Data>
          <TypeList>
            <Type n="Boolean">System.Boolean</Type>
            <Type n="CFCBoxElement">{f5becf35-b1f3-4274-b411-81d4b63a1516}</Type>
            <Type n="CFCConnection">{5ae2e111-ecff-4a21-b647-2d4da63f8db7}</Type>
            <Type n="CFCImplementationObject">{32d3375e-c010-41e2-9e43-b2fbf4f2b374}</Type>
            <Type n="CFCInputElement">{d51129f5-df27-4886-99d1-c564d2e2c1f6}</Type>
            <Type n="CFCInputPin">{c994f6e0-311a-4a1c-bc38-75fe34892406}</Type>
            <Type n="CFCInputPinWithSetReset">{5c3476a8-05c5-430e-861c-9cfa51d68ca8}</Type>
            <Type n="CFCItemList">{cd57ba20-558b-4b98-96c1-73c6000c3087}</Type>
            <Type n="CFCOutputElement">{8d9e2b78-3efe-4fe4-8160-f3a7381ddd8f}</Type>
            <Type n="CFCOutputPin">{65582d84-cf18-4ca0-be59-bf5a3d00b8f8}</Type>
            <Type n="CFCPoint">{b3e42b54-b8f2-45d3-825d-747f82f244a0}</Type>
            <Type n="CFCPointList">{584effbc-813e-443a-bf78-ad9c8d49db41}</Type>
            <Type n="CFCRoutingConnection">{93c117eb-0884-403b-b01e-28b89f47e041}</Type>
            <Type n="CFCRoutingPathTable">{4b8bcc79-5980-4868-b49e-005a8148859b}</Type>
            <Type n="CFCText">{72f2b13f-5349-4a8a-bbe6-2bccf3f42179}</Type>
            <Type n="Int32">System.Int32</Type>
            <Type n="Int64">System.Int64</Type>
            <Type n="KindOfCall">{77f43dfe-ca6a-4869-828f-7609d8ed6ea6}</Type>
            <Type n="ProcessValueAccess">{88453c7d-d652-4a27-a1b0-a1953be49a5c}</Type>
            <Type n="SetReset">{24449d48-c96a-49c4-b9d1-a4ea34aedce3}</Type>
            <Type n="SetResetRef">{233bc97c-69fe-4d29-b40e-a9a9b854044e}</Type>
            <Type n="String">System.String</Type>
          </TypeList>
        </XmlArchive>
      </CFC>
    </Implementation>
  </POU>
</TcPlcObject>